--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Flex Sandbox</title>
 </head>
 <body>
-  <h1>Welcome to the party</h1>
+  <nav>
+    <div>Home</div>
+    <div>About</div>
+    <div>Widgets</div>
+    <div>Log Out</div>
+  </nav>
 </body>
 </html>
